--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@ title: Steve Fenigstein
 ---
 
 <div id="home">
-  <h1>Blog Posts</h1>
+  <h1>Making beautiful things with Ruby and Rails</h1>
+  <h2>Some thoughts, challenges and, at times, pretty solutions</h2>
   <ul class="posts">
     {% for post in site.posts %}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
